<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/distancia"
        android:inputType="number" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_de_quilometros"
        android:layout_gravity="center"

        />
    <Space
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        />
    <EditText
        android:id="@+id/edit_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/preco" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preco_por_litro"
        android:layout_gravity="center"
        />
    <Space
        android:layout_width="wrap_content"
        android:layout_height="25dp" />
    <EditText
        android:id="@+id/edit_autonomy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/autonomia" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kms_por_litro"
        android:layout_gravity="center"
        />
    <Space
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seu_total_de_gastos_sera_de"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:textAllCaps="true"
        />
    <Space
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        />
    <TextView
        android:id="@+id/text_total_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="R$ 0"
        android:layout_gravity="center"
        android:textColor="@color/purple"
        android:textAllCaps="true"
        android:textSize="30sp"
        />
    <Space
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        />
    <Button

        android:id="@+id/button_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:backgroundTint="@color/ciano"
         android:textSize="18sp"
        android:text="@string/calcular"
        android:textAllCaps="true"

        />
</LinearLayout>